--- a/template.yaml
+++ b/template.yaml
@@ -9,7 +9,6 @@ spec:
   owner: backstage/techdocs-core
   type: service
 
-  # these are the steps which are rendered in the frontend with the form input
   parameters:
     - title: Fill in some steps
       required:
@@ -34,7 +33,6 @@ spec:
             allowedHosts:
               - github.com
 
-  # here's the steps that are executed in series in the scaffolder backend
   steps:
     - id: fetch-base
       name: Fetch Base
@@ -63,5 +61,5 @@ spec:
       name: Register
       action: catalog:register
       input:
-        repoContentsUrl: {{ steps['publish'].output.repoContentsUrl }}
+        repoContentsUrl: '{{ steps["publish"].output.repoContentsUrl }}'
         catalogInfoPath: '/catalog-info.yaml'
