--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: backstage.io/v1beta2
+apiVersion: backstage.io/v1alpha1
 kind: Template
 # some metadata about the template itself
 metadata:
